--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+    spring.datasource.url=jdbc:postgresql://localhost:5432/meusgastos
+    spring.datasource.username=postgres
+    spring.datasource.password=acdc9740
+    spring.datasource.driver-class-name=org.postgresql.Driver
+    spring.jpa.hibernate.ddl-auto=update
+    spring.jpa.show-sql=true
+
